Modify: Feature-Nav

--- a/home.html
+++ b/home.html
@@ -87,19 +87,19 @@
               <ul class="dropdown-menu p-0">
                 <li>
                   <a class="dropdown-item d-flex justify-content-between align-items-center" href="Merchant_App.html">
-                    <span class="pe-3">Merchant-App</span>
+                    <span class="pe-3"><i class="fas fa-store pe-2"></i>Restaurant Hub</span>
                     <span><i class="fa-solid fa-arrow-right"></i></span>
                   </a>
                 </li>
                 <li>
                   <a class="dropdown-item d-flex justify-content-between align-items-center" href="Merchant_Portal.html">
-                    <span class="pe-3">Merchant-Portal</span>
+                    <span class="pe-3"><i class="fa-solid fa-laptop-code pe-2"></i>Merchant Portal</span>
                     <span><i class="fa-solid fa-arrow-right"></i></span>
                   </a>
                 </li>
                 <li>
                   <a class="dropdown-item d-flex justify-content-between align-items-center" href="Customer_App.html">
-                    <span class="pe-3">Customer-App</span>
+                    <span class="pe-3"><i class="fa-solid fa-mobile-screen pe-3 ps-1"></i>DineEasy</span>
                     <span><i class="fa-solid fa-arrow-right"></i></span>
                   </a>
                 </li>
@@ -121,7 +121,7 @@
                 </li>
                 <li>
                   <a class="dropdown-item d-flex justify-content-between align-items-center" href="Hardware_Software.html">
-                    <span class="pe-3"><i class="fa-solid fa-laptop-code pe-2"></i>HardWare & Software</span> 
+                    <span class="pe-3"><i class="fa-solid fa-server pe-2"></i>HardWare & Software</span> 
                     <span><i class="fa-solid fa-arrow-right"></i></span>
                   </a>
                 </li>
@@ -237,7 +237,7 @@
               <div class="typing-section">
                 <!-- <span class="emoji">✌🏻</span> -->
                 <span class="typing-text">
-                  <span class="static-text p-2">Mode</span>
+                  <span class="static-text p-2 ps-2 ps-sm-3">Mode</span>
                   <span class="cursor">|</span>
                 </span>
               </div>
@@ -258,56 +258,6 @@
         <div class="banner-shadow-1"></div>
         <div class="banner-shadow-2"></div>
 
-      </div>
-    </div>
-    <!-- @@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@ -->
-
-
-    <!-- brand-name -->
-    <!-- @@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@ -->
-    <div class="brand-wrapper">
-      <div class="container">
-        <div class="brand-container">
-
-          <div class="section-title text-center">
-            <h2 class="section-heading m-0">Brands already transforming with Maghil</h2>
-            <h5 class="section-desc"></h5>
-          </div>
-
-          <div class="logos">
-            <div class="logos-slide">
-              <img src="Images/Brand_Name/A2B.png" alt="A2B Logo" />
-              <img src="Images/Brand_Name/Akshayam.png" alt="Akshayam Logo" />
-              <img src="Images/Brand_Name/Appams.png" alt="Appams Logo" />
-              <img src="Images/Brand_Name/BigUp.png" alt="Bigup Logo" />
-              <img src="Images/Brand_Name/Bonum_Cibum.png" alt="Bonum Logo" />
-              <img src="Images/Brand_Name/TN59.png" alt="Cafe 59 Logo" />
-              <img src="Images/Brand_Name/CakeSquare.png" alt="Cafe Square Logo" />
-              <img src="Images/Brand_Name/Minvera.png" alt="Cafe Square Logo" />
-
-              <!-- set - 2 -->
-              <img src="Images/Brand_Name/A2B.png" alt="A2B Logo" />
-              <img src="Images/Brand_Name/Akshayam.png" alt="Akshayam Logo" />
-              <img src="Images/Brand_Name/Appams.png" alt="Appams Logo" />
-              <img src="Images/Brand_Name/BigUp.png" alt="Bigup Logo" />
-              <img src="Images/Brand_Name/Bonum_Cibum.png" alt="Bonum Logo" />
-              <img src="Images/Brand_Name/TN59.png" alt="Cafe 59 Logo" />
-              <img src="Images/Brand_Name/CakeSquare.png" alt="Cafe Square Logo" />
-              <img src="Images/Brand_Name/Minvera.png" alt="Cafe Square Logo" />
-
-              <!-- set - 3 -->
-              <img src="Images/Brand_Name/A2B.png" alt="A2B Logo" />
-              <img src="Images/Brand_Name/Akshayam.png" alt="Akshayam Logo" />
-              <img src="Images/Brand_Name/Appams.png" alt="Appams Logo" />
-              <img src="Images/Brand_Name/BigUp.png" alt="Bigup Logo" />
-              <img src="Images/Brand_Name/Bonum_Cibum.png" alt="Bonum Logo" />
-              <img src="Images/Brand_Name/TN59.png" alt="Cafe 59 Logo" />
-              <img src="Images/Brand_Name/CakeSquare.png" alt="Cafe Square Logo" />
-              <img src="Images/Brand_Name/Minvera.png" alt="Cafe Square Logo" />
-            </div>
-          </div>
-
-        </div>
       </div>
     </div>
     <!-- @@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@ -->
@@ -809,6 +759,56 @@
               </div>
             </div>
 
+          </div>
+
+        </div>
+      </div>
+    </div>
+    <!-- @@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@ -->
+
+
+    <!-- brand-name -->
+    <!-- @@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@ -->
+    <div class="brand-wrapper">
+      <div class="container">
+        <div class="brand-container">
+
+          <div class="section-title text-center">
+            <h2 class="section-heading m-0">Brands already transforming with Maghil</h2>
+            <h5 class="section-desc"></h5>
+          </div>
+
+          <div class="logos">
+            <div class="logos-slide">
+              <img src="Images/Brand_Name/A2B.png" alt="A2B Logo" />
+              <img src="Images/Brand_Name/Akshayam.png" alt="Akshayam Logo" />
+              <img src="Images/Brand_Name/Appams.png" alt="Appams Logo" />
+              <img src="Images/Brand_Name/BigUp.png" alt="Bigup Logo" />
+              <img src="Images/Brand_Name/Bonum_Cibum.png" alt="Bonum Logo" />
+              <img src="Images/Brand_Name/TN59.png" alt="Cafe 59 Logo" />
+              <img src="Images/Brand_Name/CakeSquare.png" alt="Cafe Square Logo" />
+              <img src="Images/Brand_Name/Minvera.png" alt="Cafe Square Logo" />
+
+              <!-- set - 2 -->
+              <img src="Images/Brand_Name/A2B.png" alt="A2B Logo" />
+              <img src="Images/Brand_Name/Akshayam.png" alt="Akshayam Logo" />
+              <img src="Images/Brand_Name/Appams.png" alt="Appams Logo" />
+              <img src="Images/Brand_Name/BigUp.png" alt="Bigup Logo" />
+              <img src="Images/Brand_Name/Bonum_Cibum.png" alt="Bonum Logo" />
+              <img src="Images/Brand_Name/TN59.png" alt="Cafe 59 Logo" />
+              <img src="Images/Brand_Name/CakeSquare.png" alt="Cafe Square Logo" />
+              <img src="Images/Brand_Name/Minvera.png" alt="Cafe Square Logo" />
+
+              <!-- set - 3 -->
+              <img src="Images/Brand_Name/A2B.png" alt="A2B Logo" />
+              <img src="Images/Brand_Name/Akshayam.png" alt="Akshayam Logo" />
+              <img src="Images/Brand_Name/Appams.png" alt="Appams Logo" />
+              <img src="Images/Brand_Name/BigUp.png" alt="Bigup Logo" />
+              <img src="Images/Brand_Name/Bonum_Cibum.png" alt="Bonum Logo" />
+              <img src="Images/Brand_Name/TN59.png" alt="Cafe 59 Logo" />
+              <img src="Images/Brand_Name/CakeSquare.png" alt="Cafe Square Logo" />
+              <img src="Images/Brand_Name/Minvera.png" alt="Cafe Square Logo" />
+            </div>
           </div>
 
         </div>
