--- a/Book_demo.html
+++ b/Book_demo.html
@@ -87,19 +87,19 @@
               <ul class="dropdown-menu p-0">
                 <li>
                   <a class="dropdown-item d-flex justify-content-between align-items-center" href="Merchant_App.html">
-                    <span class="pe-3">Merchant-App</span>
+                    <span class="pe-3"><i class="fas fa-store pe-2"></i>Restaurant Hub</span>
                     <span><i class="fa-solid fa-arrow-right"></i></span>
                   </a>
                 </li>
                 <li>
                   <a class="dropdown-item d-flex justify-content-between align-items-center" href="Merchant_Portal.html">
-                    <span class="pe-3">Merchant-Portal</span>
+                    <span class="pe-3"><i class="fa-solid fa-laptop-code pe-2"></i>Merchant Portal</span>
                     <span><i class="fa-solid fa-arrow-right"></i></span>
                   </a>
                 </li>
                 <li>
                   <a class="dropdown-item d-flex justify-content-between align-items-center" href="Customer_App.html">
-                    <span class="pe-3">Customer-App</span>
+                    <span class="pe-3"><i class="fa-solid fa-mobile-screen pe-3 ps-1"></i>DineEasy</span>
                     <span><i class="fa-solid fa-arrow-right"></i></span>
                   </a>
                 </li>
@@ -121,7 +121,7 @@
                 </li>
                 <li>
                   <a class="dropdown-item d-flex justify-content-between align-items-center" href="Hardware_Software.html">
-                    <span class="pe-3"><i class="fa-solid fa-laptop-code pe-2"></i>HardWare & Software</span> 
+                    <span class="pe-3"><i class="fa-solid fa-server pe-2"></i>HardWare & Software</span> 
                     <span><i class="fa-solid fa-arrow-right"></i></span>
                   </a>
                 </li>
