update: opening-Hours - Footer

--- a/Merchant_Portal.html
+++ b/Merchant_Portal.html
@@ -481,12 +481,11 @@
     <div class="Powered-wrapper">
       <div class="container">
         <div class="Powered-container">
-
           <div class="row contact-info">
             <div class="col-12 col-sm-6 col-lg-3 info">
               <i class="fa-solid fa-mobile"></i>
               <p>Phone No</p>
-              <a href="#">+1 267 609 6099</a>
+              <span>+1 267 609 6099</span>
             </div>
             <div class="col-12 col-sm-6 col-lg-3 info">
               <i class="fa-solid fa-envelope"></i>
@@ -499,33 +498,55 @@
               <a href="#">Princeton, New Jersey, 08540, United States</a>
             </div>
             <div class="col-12 col-sm-6 col-lg-3 info">
-              <i class="fa-solid fa-envelope"></i>
-              <p>Subscribe to Our Newsletter</p>
-              <div class="newsletter">
-                <input type="email" placeholder="Enter your email" required>
-                <button type="submit">
-                  <i class="fa-solid fa-paper-plane"></i>
-                </button>
-              </div>
+              <i class="fa-solid fa-shop"></i>
+              <p>Opening Hours</p>
+              <span>Monday - Friday (9:00 AM to 5:00 PM)</span>
             </div>
           </div>
 
           <div class="logo-container text-center">
-            <a href="home.html"><img src="Images/Maghil_New_Logo_with_Tagline-removebg-preview.png" alt=""></a>
+            <a href="home.html"
+              ><img
+                src="Images/Maghil_New_Logo_with_Tagline-removebg-preview.png"
+                alt=""
+            /></a>
           </div>
 
-          <div class="social-media-icon d-flex align-items-center justify-content-center mt-4">
-            <a target="_blank" href="https://www.instagram.com/maghilhq/profilecard/?igsh=MWE4MHU4eXI2cmdhag==" class="pe-3"><i class="fa-brands fa-instagram"></i></a>
-            <a target="_blank" href="https://www.facebook.com/share/15NWbraL4B/" class="pe-3"><i class="fa-brands fa-facebook"></i></a>
-            <a target="_blank" href="https://twitter.com/maghilHQ" class="pe-3"><i class="fa-brands fa-x-twitter"></i></a>
-            <a target="_blank" href="https://www.youtube.com/@magilhub4286" class="pe-3"><i class="fa-brands fa-youtube"></i></a>
-            <a target="_blank" href="https://www.linkedin.com/company/maghil/" class="pe-0"><i class="fa-brands fa-linkedin"></i></a>
+          <div
+            class="social-media-icon d-flex align-items-center justify-content-center mt-4"
+          >
+            <a
+              target="_blank"
+              href="https://www.instagram.com/maghilhq/profilecard/?igsh=MWE4MHU4eXI2cmdhag=="
+              class="pe-3"
+              ><i class="fa-brands fa-instagram"></i
+            ></a>
+            <a
+              target="_blank"
+              href="https://www.facebook.com/share/15NWbraL4B/"
+              class="pe-3"
+              ><i class="fa-brands fa-facebook"></i
+            ></a>
+            <a target="_blank" href="https://twitter.com/maghilHQ" class="pe-3"
+              ><i class="fa-brands fa-x-twitter"></i
+            ></a>
+            <a
+              target="_blank"
+              href="https://www.youtube.com/@magilhub4286"
+              class="pe-3"
+              ><i class="fa-brands fa-youtube"></i
+            ></a>
+            <a
+              target="_blank"
+              href="https://www.linkedin.com/company/maghil/"
+              class="pe-0"
+              ><i class="fa-brands fa-linkedin"></i
+            ></a>
           </div>
-
         </div>
       </div>
 
-      <div style="border: 1.5px solid #E52333; margin-top: 20px;"></div>
+      <div style="border: 1.5px solid #e52333; margin-top: 20px"></div>
 
       <div class="copy-right">
         <span class="copy">© 2025 Maghil, All Rights Reserved.</span>
@@ -535,7 +556,6 @@
           <span class="p1"><a href="">Site Map</a></span>
         </div>
       </div>
-
     </div>
     <!-- @@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@ -->
 
