--- a/Pricing.html
+++ b/Pricing.html
@@ -524,7 +524,7 @@
             <div class="col-12 col-sm-6 col-lg-3 info">
               <i class="fa-solid fa-mobile"></i>
               <p>Phone No</p>
-              <a href="#">+1 267 609 6099</a>
+              <span>+1 267 609 6099</span>
             </div>
             <div class="col-12 col-sm-6 col-lg-3 info">
               <i class="fa-solid fa-envelope"></i>
@@ -537,14 +537,9 @@
               <a href="#">Princeton, New Jersey, 08540, United States</a>
             </div>
             <div class="col-12 col-sm-6 col-lg-3 info">
-              <i class="fa-solid fa-envelope"></i>
-              <p>Subscribe to Our Newsletter</p>
-              <div class="newsletter">
-                <input type="email" placeholder="Enter your email" required />
-                <button type="submit">
-                  <i class="fa-solid fa-paper-plane"></i>
-                </button>
-              </div>
+              <i class="fa-solid fa-shop"></i>
+              <p>Opening Hours</p>
+              <span>Monday - Friday (9:00 AM to 5:00 PM)</span>
             </div>
           </div>
 
@@ -638,7 +633,7 @@
         </div>
       </div>
     </div>
-
     <!-- @@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@ -->
+
   </body>
 </html>
