Modify: feature-section

--- a/Customer_App.html
+++ b/Customer_App.html
@@ -4,7 +4,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Maghil | Customer-App</title>
+    <title>Maghil | Dine Easy</title>
     <link rel="icon" href="images/red logo.png" type="image/x-icon" />
 
     <!-- Google Fonts -->
@@ -234,7 +234,7 @@
           <div class="overlay-1"></div>
           <div class="overlay-2"></div>
 
-          <h4 class="banner-text">Customer App</h4>  
+          <h4 class="banner-text">Dine Easy</h4>  
           <h3 class="banner-tagLine">Pickup, Delivery, Check-in, and Contactless Dine-In</h3>  
           <h6 class="banner-desc px-0 px-md-4">Experience seamless ordering with our app—whether it's pickup, delivery, or dine-in, we ensure a hassle-free experience.</h6>
 
@@ -253,20 +253,20 @@
           <div class="row align-items-center">
             <div class="col-12 col-lg-5 section-1 mb-4 mb-lg-0" id="">
               <div class="img-section">
-                <img src="Images/Merchant-Portal/Employee_Management.png" alt="" class="img-fluid">
+                <img src="Images/Customer-App/Pickup_Delivery_1.jpg" alt="" class="img-fluid">
               </div>
             </div>
             <div class="col-12 col-lg-7 section-1 parent-overlay px-3">
               <div class="child-overlay"></div>
               <div class="content-section left">
                 <div class="heading-content">
-                  <h3 class="text-center text-sm-start">Transform Your Business with Smart POS Solutions</h3>
-                  <h6>Maghil is designed to empower businesses with cutting-edge POS technology, ensuring seamless operations and enhanced customer experience.</h6>
+                  <h3 class="text-center text-sm-start">Pickup & Delivery</h3>
+                  <h6>Convenient and hassle-free food ordering, whether you choose to pick up your meal or have it delivered to your doorstep.</h6>
                 </div>
                 <div class="sub-content">
-                  <p><i class="fa-regular fa-hand-point-right me-2"></i>Effortless Transactions – Simplify sales with an intuitive and fast checkout process.</p>
-                  <p><i class="fa-regular fa-hand-point-right me-2"></i>Cloud-Powered Management – Access and manage your business from anywhere, anytime.</p>
-                  <h6>We blend technology and efficiency to streamline operations, optimize sales, and elevate business performance with smart, data-driven insights.</h6>
+                  <p><i class="fa-regular fa-hand-point-right me-2"></i>Quick and Easy Pickup – Order ahead and grab your food without waiting.</p>
+                  <p><i class="fa-regular fa-hand-point-right me-2"></i>Fast & Reliable Delivery – Get your favorite meals delivered to your doorstep.</p>
+                  <h6>Enjoy seamless food ordering with a smooth and efficient process, ensuring your meals reach you exactly when you need them.</h6>
                 </div>
               </div>
             </div>
@@ -277,63 +277,19 @@
               <div class="child-overlay"></div>          
               <div class="content-section">
                 <div class="heading-content">
-                  <h3 class="text-center text-sm-start">Optimize Your Restaurant’s Workflow</h3>
-                  <h6>Empower your restaurant team with an efficient, AI-driven solution that enhances productivity and collaboration.</h6>
+                  <h3 class="text-center text-sm-start">Contactless Dine-In</h3>
+                  <h6>A safe and modern dining experience where you can order and enjoy your meal with minimal physical contact.</h6>
                 </div>
                 <div class="sub-content">
-                  <p><i class="fa-regular fa-hand-point-right me-2"></i>Streamline operations with intelligent automation.</p>
-                  <p><i class="fa-regular fa-hand-point-right me-2"></i>Improve team coordination for a smooth workflow.</p>
-                  <h6>From kitchen to customer, Maghil optimizes every step of the process.</h6>
+                  <p><i class="fa-regular fa-hand-point-right me-2"></i>Scan & Order – Use your phone to browse the menu and place an order.</p>
+                  <p><i class="fa-regular fa-hand-point-right me-2"></i>Safe & Secure – Minimize contact and enjoy a seamless dining experience.</p>
+                  <h6>Enhance your dine-in experience with technology that prioritizes both convenience and safety, making every meal stress-free.</h6>
                 </div>
               </div>
             </div>
             <div class="col-12 col-lg-5 section-1 order-1 order-lg-2 mb-4 mb-lg-0" id="">
               <div class="img-section">
-                <img src="Images/Merchant-Portal/Offer_Management.png" alt="" class="img-fluid">
-              </div>
-            </div>
-          </div>
-          <!-- 3 -->
-          <div class="row align-items-center">
-            <div class="col-12 col-lg-5 section-1 mb-4 mb-lg-0" id="">
-              <div class="img-section">
-                <img src="Images/Merchant-Portal/Product_Catalog.png" alt="" class="img-fluid">
-              </div>
-            </div>
-            <div class="col-12 col-lg-7 section-1 parent-overlay px-3">
-              <div class="child-overlay"></div>
-              <div class="content-section left">
-                <div class="heading-content">
-                  <h3 class="text-center text-sm-start">Amplify Your Restaurant’s Success</h3>
-                  <h6>Maghil isn’t just a management tool; it’s a growth engine for restaurant owners.</h6>
-                </div>
-                <div class="sub-content">
-                  <p><i class="fa-regular fa-hand-point-right me-2"></i>Advanced analytics for data-driven decision-making.</p>
-                  <p><i class="fa-regular fa-hand-point-right me-2"></i>Tools to enhance customer engagement and retention.</p>
-                  <h6>With Maghil, take your restaurant to the next level and unlock its full potential.</h6>
-                </div>
-              </div>
-            </div>
-          </div>
-          <!-- 4 - left -->
-          <div class="row align-items-center">
-            <div class="col-12 col-lg-7 section-1 parent-overlay order-2 order-lg-1 px-3">
-              <div class="child-overlay"></div>          
-              <div class="content-section">
-                <div class="heading-content">
-                  <h3 class="text-center text-sm-start">Optimize Your Restaurant’s Workflow</h3>
-                  <h6>Empower your restaurant team with an efficient, AI-driven solution that enhances productivity and collaboration.</h6>
-                </div>
-                <div class="sub-content">
-                  <p><i class="fa-regular fa-hand-point-right me-2"></i>Streamline operations with intelligent automation.</p>
-                  <p><i class="fa-regular fa-hand-point-right me-2"></i>Improve team coordination for a smooth workflow.</p>
-                  <h6>From kitchen to customer, Maghil optimizes every step of the process.</h6>
-                </div>
-              </div>
-            </div>
-            <div class="col-12 col-lg-5 section-1 order-1 order-lg-2 mb-4 mb-lg-0" id="">
-              <div class="img-section">
-                <img src="Images/Merchant-Portal/Reports_Insights.png" alt="" class="img-fluid">
+                <img src="Images/Customer-App/contactLess_DineIn_1.jpg" alt="" class="img-fluid">
               </div>
             </div>
           </div>
