--- a/Merchant_App.html
+++ b/Merchant_App.html
@@ -4,7 +4,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Maghil | Merchant-App</title>
+    <title>Maghil | Restaurant Hub</title>
     <link rel="icon" href="images/red logo.png" type="image/x-icon" />
 
     <!-- Google Fonts -->
@@ -234,7 +234,7 @@
           <div class="overlay-1"></div>
           <div class="overlay-2"></div>
 
-          <h4 class="banner-text">Merchant App</h4>  
+          <h4 class="banner-text">Restaurant Hub</h4>  
           <h3 class="banner-tagLine">Seamless Order, Cash, and Menu Management</h3>  
           <h6 class="banner-desc px-0 px-md-4">Optimize your restaurant operations with dine-in, order management, check-in, cash handling, menu control, time tracking, reports, and KDS integration.</h6>
 
@@ -253,7 +253,7 @@
           <div class="row align-items-center">
             <div class="col-12 col-lg-5 section-1 mb-4 mb-lg-0" id="Order_Management">
               <div class="img-section">
-                <img src="Images/Merchant-App/Order_Management.png" alt="" class="img-fluid">
+                <img src="Images/Merchant-App/Order_Management_1.jpg" alt="" class="img-fluid">
               </div>
             </div>
             <div class="col-12 col-lg-7 section-1 parent-overlay px-3">
@@ -289,7 +289,7 @@
             </div>
             <div class="col-12 col-lg-5 section-1 order-1 order-lg-2 mb-4 mb-lg-0" id="CheckIn_Management">
               <div class="img-section">
-                <img src="Images/Merchant-App/Check_In_Management.png" alt="" class="img-fluid">
+                <img src="Images/Merchant-App/Check_In_1.jpg" alt="" class="img-fluid">
               </div>
             </div>
           </div>
@@ -297,7 +297,7 @@
           <div class="row align-items-center">
             <div class="col-12 col-lg-5 section-1 mb-4 mb-lg-0" id="Time_Management">
               <div class="img-section">
-                <img src="Images/Merchant-App/Time_Management.png" alt="" class="img-fluid">
+                <img src="Images/Merchant-App/Time_Management_1.jpg" alt="" class="img-fluid">
               </div>
             </div>
             <div class="col-12 col-lg-7 section-1 parent-overlay px-3">
@@ -333,7 +333,7 @@
             </div>
             <div class="col-12 col-lg-5 section-1 order-1 order-lg-2 mb-4 mb-lg-0" id="Digital_DineInManagement">
               <div class="img-section">
-                <img src="Images/Merchant-App/Digital_DineIn_Mangement.png" alt="" class="img-fluid">
+                <img src="Images/Merchant-App/Digital_DineIn_1.jpg" alt="" class="img-fluid">
               </div>
             </div>
           </div>
@@ -341,7 +341,7 @@
           <div class="row align-items-center">
             <div class="col-12 col-lg-5 section-1 mb-4 mb-lg-0" id="Menu_Management">
               <div class="img-section">
-                <img src="Images/Merchant-App/Menu_Management.png" alt="" class="img-fluid">
+                <img src="Images/Merchant-App/Menu_Management_1.jpg" alt="" class="img-fluid">
               </div>
             </div>
             <div class="col-12 col-lg-7 section-1 parent-overlay px-3">
@@ -377,7 +377,7 @@
             </div>
             <div class="col-12 col-lg-5 section-1 order-1 order-lg-2 mb-4 mb-lg-0" id="Cash_Management">
               <div class="img-section">
-                <img src="Images/Merchant-App/Cash_Management.png" alt="" class="img-fluid">
+                <img src="Images/Merchant-App/Cash_Management_1.jpg" alt="" class="img-fluid">
               </div>
             </div>
           </div>
