--- a/Merchant_Portal.html
+++ b/Merchant_Portal.html
@@ -254,7 +254,7 @@
           <div class="row align-items-center">
             <div class="col-12 col-lg-5 section-1 mb-4 mb-lg-0" id="Employee_Management">
               <div class="img-section">
-                <img src="Images/Merchant-Portal/Employee_Management.png" alt="" class="img-fluid">
+                <img src="Images/Merchant-Portal/Employee_Management_1.jpg" alt="" class="img-fluid">
               </div>
             </div>
             <div class="col-12 col-lg-7 section-1 parent-overlay px-3">
@@ -290,7 +290,7 @@
             </div>
             <div class="col-12 col-lg-5 section-1 order-1 order-lg-2 mb-4 mb-lg-0" id="Offer_Management">
               <div class="img-section">
-                <img src="Images/Merchant-Portal/Offer_Management.png" alt="" class="img-fluid">
+                <img src="Images/Merchant-Portal/Offer_Management_1.jpg" alt="" class="img-fluid">
               </div>
             </div>
           </div>
@@ -298,7 +298,7 @@
           <div class="row align-items-center">
             <div class="col-12 col-lg-5 section-1 mb-4 mb-lg-0" id="Product_Catalog">
               <div class="img-section">
-                <img src="Images/Merchant-Portal/Product_Catalog.png" alt="" class="img-fluid">
+                <img src="Images/Merchant-Portal/Product_Catalog_1.jpg" alt="" class="img-fluid">
               </div>
             </div>
             <div class="col-12 col-lg-7 section-1 parent-overlay px-3">
@@ -334,7 +334,7 @@
             </div>
             <div class="col-12 col-lg-5 section-1 order-1 order-lg-2 mb-4 mb-lg-0" id="Reports_Insights">
               <div class="img-section">
-                <img src="Images/Merchant-Portal/Reports_Insights.png" alt="" class="img-fluid">
+                <img src="Images/Merchant-Portal/Report-Insights_1.jpg" alt="" class="img-fluid">
               </div>
             </div>
           </div>
