ft : nav update

--- a/Pricing.html
+++ b/Pricing.html
@@ -62,7 +62,7 @@
   <body>
     <!-- Navbar -->
     <!-- @@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@ -->
-    <nav class="navbar navbar-expand-md fixed-top">
+    <nav class="navbar navbar-expand-xl fixed-top">
       <div class="container navbar-container">
         <!-- Logo -->
         <a class="navbar-brand" href="home.html">
@@ -70,17 +70,25 @@
         </a>
 
         <!-- Nav-items -->
-        <button class="navbar-toggler d-md-none ms-auto" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+        <button class="navbar-toggler d-xl-none ms-auto" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
         </button>
         <div class="collapse navbar-collapse pe-3 pe-md-0" id="navbarSupportedContent">
-          <ul class="navbar-nav ms-auto m-lg-auto mb-2 mb-lg-0">
+          <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
 
-            <!-- 1 - Features -->
+
+            <!-- home -->
+            <li class="nav-item">
+              <!-- nav-link -->
+              <a class="navigation-link nav-link" href="home.html">Home</a>
+            </li>
+
+
+            <!-- 1 - platform services -->
             <li class="nav-item dropdown">
               <!-- nav-link -->
               <a class="main-link navigation-link nav-link d-flex justify-content-between align-items-center" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-                Features<i class="fa-solid fa-caret-down ps-2"></i>
+                Platform Services<i class="fa-solid fa-caret-down ps-2"></i>
               </a>
               <ul class="dropdown-menu p-0">
                 <li>
@@ -104,11 +112,11 @@
               </ul>
             </li>
 
-            <!-- 2 - Solutions -->
+            <!-- 2 - Branding & Media -->
             <li class="nav-item dropdown">
               <!-- nav-link -->
               <a class="main-link navigation-link nav-link d-flex justify-content-between align-items-center active" aria-current="page" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-                Solutions<i class="fa-solid fa-caret-down ps-2"></i>
+                Branding & Media<i class="fa-solid fa-caret-down ps-2"></i>
               </a>
               <ul class="dropdown-menu p-0">
                 <li>
@@ -132,11 +140,17 @@
               </ul>
             </li>
 
-            <!-- 3 - Industries -->
+            <!-- 3 - AI Offerings -->
+            <li class="nav-item">
+              <!-- nav-link -->
+              <a class="navigation-link nav-link" href="Pricing.html">AI Offerings</a>
+            </li>
+
+            <!-- 4 - MarketPlace -->
             <li class="nav-item dropdown">
               <!-- nav-link -->
               <a class="main-link navigation-link nav-link d-flex justify-content-between align-items-center active" aria-current="page" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-                Industries<i class="fa-solid fa-caret-down ps-2"></i>
+                MarketPlace<i class="fa-solid fa-caret-down ps-2"></i>
               </a>
               <ul class="dropdown-menu p-0">
                 <li>
@@ -166,17 +180,17 @@
               </ul>
             </li>
 
-            <!-- 4 - Price -->
+            <!-- 5 - Customers -->
             <li class="nav-item">
               <!-- nav-link -->
-              <a class="navigation-link nav-link" href="Pricing.html">Pricing</a>
+              <a class="navigation-link nav-link" href="Pricing.html">Customers</a>
             </li>
 
-            <!-- 5 - Resourse -->
+            <!-- 6 - Contact -->
             <li class="nav-item dropdown">
               <!-- nav-link -->
               <a class="main-link navigation-link nav-link d-flex justify-content-between align-items-center" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-                Resource<i class="fa-solid fa-caret-down ps-2"></i>
+                Contact US<i class="fa-solid fa-caret-down ps-2"></i>
               </a>
               <ul class="dropdown-menu p-0">
                 <li>
@@ -207,17 +221,17 @@
             </li>
 
             <!-- Drop-Down Button -->
-            <div class="nav-btn-container d-block d-md-none text-center mt-3">
+            <!-- <div class="nav-btn-container d-block d-md-none text-center mt-3">
               <a class="nav-link nav-btn-demo" href="Book_demo.html">Book Demo</a>
-            </div>
+            </div> -->
 
           </ul>
         </div>
 
         <!-- Shedule a Demo -->
-        <div class="btn-container">
+        <!-- <div class="btn-container">
           <a class="nav-link btn-demo" href="Book_demo.html">Book Demo</a>
-        </div>
+        </div> -->
       </div>
     </nav>
     <!-- @@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@ -->
