--- a/home.html
+++ b/home.html
@@ -64,7 +64,7 @@
     
     <!-- Navbar -->
     <!-- @@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@ -->
-    <nav class="navbar navbar-expand-md fixed-top">
+    <nav class="navbar navbar-expand-xl fixed-top">
       <div class="container navbar-container">
         <!-- Logo -->
         <a class="navbar-brand" href="home.html">
@@ -72,17 +72,25 @@
         </a>
 
         <!-- Nav-items -->
-        <button class="navbar-toggler d-md-none ms-auto" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+        <button class="navbar-toggler d-xl-none ms-auto" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
         </button>
         <div class="collapse navbar-collapse pe-3 pe-md-0" id="navbarSupportedContent">
-          <ul class="navbar-nav ms-auto m-lg-auto mb-2 mb-lg-0">
+          <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
 
-            <!-- 1 - Features -->
+
+            <!-- home -->
+            <li class="nav-item">
+              <!-- nav-link -->
+              <a class="navigation-link nav-link" href="home.html">Home</a>
+            </li>
+
+
+            <!-- 1 - platform services -->
             <li class="nav-item dropdown">
               <!-- nav-link -->
               <a class="main-link navigation-link nav-link d-flex justify-content-between align-items-center" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-                Features<i class="fa-solid fa-caret-down ps-2"></i>
+                Platform Services<i class="fa-solid fa-caret-down ps-2"></i>
               </a>
               <ul class="dropdown-menu p-0">
                 <li>
@@ -106,11 +114,11 @@
               </ul>
             </li>
 
-            <!-- 2 - Solutions -->
+            <!-- 2 - Branding & Media -->
             <li class="nav-item dropdown">
               <!-- nav-link -->
               <a class="main-link navigation-link nav-link d-flex justify-content-between align-items-center active" aria-current="page" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-                Solutions<i class="fa-solid fa-caret-down ps-2"></i>
+                Branding & Media<i class="fa-solid fa-caret-down ps-2"></i>
               </a>
               <ul class="dropdown-menu p-0">
                 <li>
@@ -134,11 +142,17 @@
               </ul>
             </li>
 
-            <!-- 3 - Industries -->
+            <!-- 3 - AI Offerings -->
+            <li class="nav-item">
+              <!-- nav-link -->
+              <a class="navigation-link nav-link" href="Pricing.html">AI Offerings</a>
+            </li>
+
+            <!-- 4 - MarketPlace -->
             <li class="nav-item dropdown">
               <!-- nav-link -->
               <a class="main-link navigation-link nav-link d-flex justify-content-between align-items-center active" aria-current="page" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-                Industries<i class="fa-solid fa-caret-down ps-2"></i>
+                MarketPlace<i class="fa-solid fa-caret-down ps-2"></i>
               </a>
               <ul class="dropdown-menu p-0">
                 <li>
@@ -168,17 +182,17 @@
               </ul>
             </li>
 
-            <!-- 4 - Price -->
+            <!-- 5 - Customers -->
             <li class="nav-item">
               <!-- nav-link -->
-              <a class="navigation-link nav-link" href="Pricing.html">Pricing</a>
+              <a class="navigation-link nav-link" href="Pricing.html">Customers</a>
             </li>
 
-            <!-- 5 - Resourse -->
+            <!-- 6 - Contact -->
             <li class="nav-item dropdown">
               <!-- nav-link -->
               <a class="main-link navigation-link nav-link d-flex justify-content-between align-items-center" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-                Resource<i class="fa-solid fa-caret-down ps-2"></i>
+                Contact US<i class="fa-solid fa-caret-down ps-2"></i>
               </a>
               <ul class="dropdown-menu p-0">
                 <li>
@@ -209,17 +223,17 @@
             </li>
 
             <!-- Drop-Down Button -->
-            <div class="nav-btn-container d-block d-md-none text-center mt-3">
+            <!-- <div class="nav-btn-container d-block d-md-none text-center mt-3">
               <a class="nav-link nav-btn-demo" href="Book_demo.html">Book Demo</a>
-            </div>
+            </div> -->
 
           </ul>
         </div>
 
         <!-- Shedule a Demo -->
-        <div class="btn-container">
+        <!-- <div class="btn-container">
           <a class="nav-link btn-demo" href="Book_demo.html">Book Demo</a>
-        </div>
+        </div> -->
       </div>
     </nav>
     <!-- @@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@ -->
@@ -265,7 +279,7 @@
 
     <!-- Achievements -->
     <!-- @@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@ -->
-    <!-- <div class="Achievement-wrapper">
+    <div class="Achievement-wrapper">
       <div class="container">
         <div class="Achievement-container">
 
@@ -319,7 +333,7 @@
 
         </div>
       </div>
-    </div> -->
+    </div>
     <!-- @@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@ -->
     
 
@@ -718,48 +732,42 @@
             <h5 class="section-desc">Celebrating Milestones Through Your Words</h5>
           </div>
 
-          <div class="row">
-            <!-- 1 -->
-            <div class="col-12 col-md-6 mt-4">
-              <div class="testimonial-card">
-                <div class="d-flex align-items-center">
-                  <!-- <img src="https://via.placeholder.com/60" alt="User Image"> -->
-                  <div class="testimonial-image"></div>
-                  <div class="testimonial-name-stars">
-                    <h5 class="name">M S Dhoni</h5>
-                    <p class="stars">★★★★★</p>
+            <div class="testimonial-content">
+              <div class="row">
+                  <!-- Testimonial 1 -->
+                  <div class="col-12 col-sm-6 col-md-4 mb-4 mx-auto">
+                      <div class="testimonial-item">
+                          <div class="testimonial-quote">
+                              <i class="fas fa-quote-left"></i>
+                          </div>
+                          <p class="testimonial-text">The food was absolutely delicious, and the service was outstanding. Highly recommend!</p>
+                          <h6 class="testimonial-name">John Doe</h6>
+                      </div>
                   </div>
-                </div>
-                <div class="quote-icon text-start ms-2 mt-2">
-                  <i class="fa fa-quote-right"></i>
-                </div>
-                <div class="testimonial-body text-start ms-2 mt-1">
-                  The analytics features are outstanding! I now have a clear view of my sales trends and customer preferences. Highly recommend it for small businesses.
-                </div>
+
+                  <!-- Testimonial 2 -->
+                  <div class="col-12 col-sm-6 col-md-4 mb-4 mx-auto">
+                      <div class="testimonial-item">
+                          <div class="testimonial-quote">
+                              <i class="fas fa-quote-left"></i>
+                          </div>
+                          <p class="testimonial-text">We had an amazing catering experience. Everything was fresh and beautifully presented.</p>
+                          <h6 class="testimonial-name">Sarah Williams</h6>
+                      </div>
+                  </div>
+
+                  <!-- Testimonial 3 -->
+                  <div class="col-12 col-sm-6 col-md-4 mb-4 mx-auto">
+                      <div class="testimonial-item">
+                          <div class="testimonial-quote">
+                              <i class="fas fa-quote-left"></i>
+                          </div>
+                          <p class="testimonial-text">Professional team, great flavors, and timely delivery. Couldn’t have asked for better!</p>
+                          <h6 class="testimonial-name">Michael Smith</h6>
+                      </div>
+                  </div>
               </div>
             </div>
-
-            <!-- 2 -->
-            <div class="col-12 col-md-6 mt-4">
-              <div class="testimonial-card">
-                <div class="d-flex align-items-center">
-                  <!-- <img src="https://via.placeholder.com/60" alt="User Image"> -->
-                  <div class="testimonial-image"></div>
-                  <div class="testimonial-name-stars">
-                    <h5 class="name">Virat Kolhi</h5>
-                    <p class="stars">★★★★</p>
-                  </div>
-                </div>
-                <div class="quote-icon text-start ms-2 mt-2">
-                  <i class="fa fa-quote-right"></i>
-                </div>
-                <div class="testimonial-body text-start ms-2 mt-1">
-                  I love how this POS integrates with our online store. It keeps everything in sync and ensures we never oversell or run out of stock.
-                </div>
-              </div>
-            </div>
-
-          </div>
 
         </div>
       </div>
